<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4C3"
    android:paddingLeft="5dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="College of Arts, Commerce And Law"
                android:textSize="25dp"
                android:textColor="#f60b0b" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#132ef5"
                android:text="@string/economics"
                android:id="@+id/tv1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:text="@string/english"
                android:id="@+id/tv2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/histry"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BusinessStudies"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LifeLongLearning"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MahayanaBuddhistStudies"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PoliticalScience"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sociology"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tourism"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv9"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Commerce"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BusinessStudies"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Education"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv12"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hindi"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HRM"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv14"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Journalism"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv15"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/M.B.A.HospitalAdministration"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P.G.DepartmentofLegalStudies"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv17"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RuralDevelopment"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv18"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TeluguandSanskrit"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv19"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="College of Engineering And Technology"

                android:textSize="25dp"
                android:textColor="#f60b0b" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CSE"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv20"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ECE"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv21"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CIVIL"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv22"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ElectricalandElectronicEngineering"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv23"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MechanicalEngineering"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="College of Sciences"

                android:textSize="25dp"
                android:textColor="#f60b0b"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BioChemistry"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv25" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Botany"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv26"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnvironmentalScience"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv27"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Geology"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv28"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Microbiology"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv29"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Physics"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv30"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zoology"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv31"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Biotechnology"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv32"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chemistry"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv33"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ElectronicsinstrumentationTechnology"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv34"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FoodsandNutritionalScience"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv35"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mathematics"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv36"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NanoTechnology"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv37"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics"
                android:textColor="#132ef5"
                android:textSize="20dp"
                android:id="@+id/tv38"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"

                android:textSize="25dp"
                android:textColor="#f60b0b"
                android:id="@+id/tv39"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy"
                android:id="@+id/tv40"
                android:textSize="25dp"
                android:textColor="#f60b0b"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barch"
                android:id="@+id/tv41"
                android:textSize="25dp"
                android:textColor="#f60b0b"
                />

        </LinearLayout>
    </ScrollView>



</LinearLayout>
